--- a/app/src/main/res/layout/app_bar.xml
+++ b/app/src/main/res/layout/app_bar.xml
@@ -13,7 +13,7 @@
     app:theme="@style/MyCustomToolBarTheme"
     app:popupTheme="@style/AbStyle">
 
-    <com.makeramen.RoundedImageView
+    <com.makeramen.roundedimageview.RoundedImageView
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_marginRight="4dp"
         android:layout_marginEnd="4dp"
