--- a/app/src/main/res/layout/row_google_cardview_doctors.xml
+++ b/app/src/main/res/layout/row_google_cardview_doctors.xml
@@ -30,7 +30,7 @@
             android:layout_width="match_parent"
             android:background="?android:attr/selectableItemBackground"
             android:layout_height="wrap_content">
-        <com.makeramen.RoundedImageView
+        <com.makeramen.roundedimageview.RoundedImageView
             xmlns:app="http://schemas.android.com/apk/res-auto"
             android:layout_marginRight="4dp"
             android:layout_marginEnd="4dp"
@@ -81,7 +81,7 @@
             android:layout_margin="8dp"
             android:layout_width="match_parent"
             android:layout_height="1dp"
-            android:background="@color/accent"
+            android:background="@color/Primary_Grey_300"
             >
         </View>
 
@@ -89,7 +89,47 @@
             android:id="@+id/viewBottomDoctorViewDetails"
             android:layout_width="match_parent"
             android:layout_height="40dp">
-            <com.makeramen.RoundedImageView
+            <com.makeramen.roundedimageview.RoundedImageView
+                xmlns:app="http://schemas.android.com/apk/res-auto"
+                android:clickable="true"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:layout_marginLeft="8dp"
+                android:layout_marginStart="8dp"
+                android:id="@+id/imageDoctorEmail"
+                android:src="@drawable/ic_action_settings"
+                android:scaleType="centerCrop"
+                android:layout_width="32dp"
+                android:layout_height="32dp"
+                android:visibility="visible"
+                android:background="@drawable/oval_shape"
+                app:riv_corner_radius="10dip"
+                app:riv_border_width="0dip"
+                app:riv_border_color="@color/icons"
+                app:riv_mutate_background="true"
+                app:riv_tile_mode="clamp"
+                app:riv_oval="true" />
+            <com.makeramen.roundedimageview.RoundedImageView
+                xmlns:app="http://schemas.android.com/apk/res-auto"
+                android:clickable="true"
+                android:layout_toRightOf="@+id/imageDoctorEmail"
+                android:layout_toEndOf="@+id/imageDoctorEmail"
+                android:layout_marginLeft="8dp"
+                android:layout_marginStart="8dp"
+                android:id="@+id/imageDoctorMessage"
+                android:src="@drawable/ic_action_accept"
+                android:scaleType="centerCrop"
+                android:layout_width="32dp"
+                android:layout_height="32dp"
+                android:visibility="visible"
+                android:background="@drawable/oval_shape"
+                app:riv_corner_radius="10dip"
+                app:riv_border_width="0dip"
+                app:riv_border_color="@color/icons"
+                app:riv_mutate_background="true"
+                app:riv_tile_mode="clamp"
+                app:riv_oval="true" />
+            <com.makeramen.roundedimageview.RoundedImageView
                 xmlns:app="http://schemas.android.com/apk/res-auto"
                 android:clickable="true"
                 android:layout_alignParentEnd="true"
@@ -102,14 +142,15 @@
                 android:layout_width="32dp"
                 android:layout_height="32dp"
                 android:visibility="visible"
-                android:background="?android:attr/selectableItemBackground"
+                android:background="@drawable/oval_shape"
                 app:riv_corner_radius="10dip"
-                app:riv_border_width="2dip"
+                app:riv_border_width="0dip"
                 app:riv_border_color="@color/icons"
                 app:riv_mutate_background="true"
                 app:riv_tile_mode="clamp"
                 app:riv_oval="true" />
         </RelativeLayout>
+
         <FrameLayout
             android:id="@+id/viewCheckInDetails"
             android:visibility="gone"
