- new drawer library - layout doctor card modification

--- a/app/src/main/res/layout/row_google_cardview_doctors.xml
+++ b/app/src/main/res/layout/row_google_cardview_doctors.xml
@@ -96,8 +96,10 @@
             android:layout_height="wrap_content">
 
             <RelativeLayout
+                android:id="@+id/phoneInfoContainer"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:background="?android:attr/selectableItemBackground"
                 android:layout_marginStart="8dp"
                 android:layout_marginLeft="8dp"
                 android:layout_marginTop="4dp"
@@ -114,7 +116,7 @@
                 android:layout_width="32dp"
                 android:layout_height="32dp"
                 android:visibility="visible"
-                android:background="@drawable/button_effect"
+                android:background="@drawable/btn_pressed_effect"
                 app:riv_corner_radius="10dip"
                 app:riv_border_width="0dip"
                 app:riv_border_color="@color/icons"
@@ -135,8 +137,10 @@
                 />
             </RelativeLayout>
             <RelativeLayout
+                android:id="@+id/emailInfoContainer"
                 android:layout_marginStart="8dp"
                 android:layout_marginLeft="8dp"
+                android:background="?android:attr/selectableItemBackground"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
                 <com.makeramen.roundedimageview.RoundedImageView
@@ -151,7 +155,7 @@
                     android:layout_width="32dp"
                     android:layout_height="32dp"
                     android:visibility="visible"
-                    android:background="@drawable/oval_shape"
+                    android:background="@drawable/btn_pressed_effect"
                     app:riv_corner_radius="10dip"
                     app:riv_border_width="0dip"
                     app:riv_border_color="@color/icons"
@@ -201,7 +205,7 @@
                 android:layout_width="32dp"
                 android:layout_height="32dp"
                 android:visibility="visible"
-                android:background="@drawable/oval_shape"
+                android:background="@drawable/btn_pressed_effect"
                 app:riv_corner_radius="10dip"
                 app:riv_border_width="0dip"
                 app:riv_border_color="@color/icons"
@@ -216,12 +220,12 @@
                 android:layout_marginLeft="8dp"
                 android:layout_marginStart="8dp"
                 android:id="@+id/imageDoctorMessage"
-                android:src="@drawable/ic_action_accept"
+                android:src="@drawable/ic_access_alarm_grey600_24dp"
                 android:scaleType="centerCrop"
                 android:layout_width="32dp"
                 android:layout_height="32dp"
                 android:visibility="visible"
-                android:background="@drawable/oval_shape"
+                android:background="@drawable/btn_pressed_effect"
                 app:riv_corner_radius="10dip"
                 app:riv_border_width="0dip"
                 app:riv_border_color="@color/icons"
@@ -236,12 +240,12 @@
                 android:layout_marginRight="8dp"
                 android:layout_marginEnd="8dp"
                 android:id="@+id/imageDoctorCall"
-                android:src="@drawable/ic_access_alarm_grey600_24dp"
+                android:src="@drawable/ic_action_accept"
                 android:scaleType="centerCrop"
                 android:layout_width="32dp"
                 android:layout_height="32dp"
-                android:visibility="visible"
-                android:background="@drawable/oval_shape"
+                android:visibility="gone"
+                android:background="@drawable/btn_pressed_effect"
                 app:riv_corner_radius="10dip"
                 app:riv_border_width="0dip"
                 app:riv_border_color="@color/icons"
