--- a/app/src/main/res/layout/app_bar.xml
+++ b/app/src/main/res/layout/app_bar.xml
@@ -13,7 +13,7 @@
     app:theme="@style/MyCustomToolBarTheme"
     app:popupTheme="@style/AbStyle">
 
-    <com.makeramen.roundedimageview.RoundedImageView
+<!--    <com.makeramen.roundedimageview.RoundedImageView
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_marginRight="4dp"
         android:layout_marginEnd="4dp"
@@ -28,7 +28,7 @@
         app:riv_border_color="@color/icons"
         app:riv_mutate_background="true"
         app:riv_tile_mode="clamp"
-        app:riv_oval="true" />
+        app:riv_oval="true" />-->
 
     <TextView
         android:visibility="visible"
