--- a/app/src/main/res/menu/menu_medicines.xml
+++ b/app/src/main/res/menu/menu_medicines.xml
@@ -1,5 +1,6 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context="org.symptomcheck.capstone.ui.CheckInFlowActivityOld">
 
 
@@ -7,5 +8,5 @@
         android:icon="@drawable/ic_action_new_event"
         android:title="@string/add_new_medicine"
         android:orderInCategory="100"
-        android:showAsAction="always" />
+        app:showAsAction="always" />
 </menu>
